<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_upcoming_event"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_upcoming_event" />

        <item
            android:id="@+id/nav_help_feedback"
            android:icon="@drawable/ic_help_feedback"
            android:title="@string/nav_help_feedback" />
    </group>

    <group
        android:id="@+id/menu_bottom">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />
    </group>

</menu>