<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corners"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/clarification_dialog_title"
        android:textColor="@color/blue_logo"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/weather_logo"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/weather_logo"
        android:layout_width="36dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:src="@drawable/ic_more_information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/clarification_dialog_body"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_logo" />


    <CheckBox
        android:id="@+id/clarification_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/clarification_dialog_checkbox"
        android:textSize="17sp"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="40dp" />

    <Button
        android:id="@+id/cancel_clarification_dialog"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_radius"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/alert_rating_cancel"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clarification_checkBox" />

</androidx.constraintlayout.widget.ConstraintLayout>