<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:fontFamily="@font/cairo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/login_welcome"
        android:textSize="44sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue_logo"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/under_welcome"
        android:textColor="@color/dark_grey"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/login_description"
        android:textAlignment="center"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/under_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/login_illustration"
        android:src="@drawable/ic_login_illustration"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_continue"
        app:layout_constraintTop_toBottomOf="@id/login_illustration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp"
        android:textColor="@color/dark_grey"
        android:text="@string/login_continue"/>


    <Button
        android:id="@+id/facbook_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/facebook_btn_shape"
        android:drawableLeft="@drawable/ic_facebook_icon"
        android:fontFamily="monospace"
        android:paddingLeft="30dp"
        android:paddingRight="70dp"
        android:text="facebook"
        android:textAlignment="center"
        android:textColor="@color/white_login_screen"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gmail_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/gmail_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gmail_btn_shape"
        android:drawableLeft="@drawable/ic_google_icon"
        android:fontFamily="monospace"
        android:paddingLeft="30dp"
        android:paddingRight="70dp"
        android:text="gmail"
        android:textColor="@color/white_login_screen"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>